--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,124 +1,178 @@
-<% layout("/layouts/boilerplate") %>
-<style>
-    #features{
-        display: flex;
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        height: 3.5rem;
-        overflow: hidden;
-    }
-    #feature{
-        text-align: center;
-        opacity: 0.7;
-        color: black;
-    }
-    #feature p{
-        font-size: small;
-        text-decoration: dotted;
-    }
-    #feature:hover{
-        opacity: 1;
-        border-bottom: 2px solid rgba(90, 86, 86, 0.409) !important;
-
-    }
-    #feature:active{
-        font-size: x-small;
-
-    }
-    a:link {
-        text-decoration: none;
-    }
-    
-    
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wander Lust</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/rating.css">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script>
+  </head>
+</head>
 <body>
-    <div id="features" class="col-12">
-        <a href="/listing/filter/FarmHouse"><div id="feature" class="ms-2">
-            <i class="fa-solid fa-tractor"></i>
-            <p>FarmHouse</p>
-        </div></a>
-        <a href="/listing/filter/TinyHome"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-house-chimney"></i>
-            <p>TinyHome</p>
-        </div></a>
-        <a href="/listing/filter/Dome"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-igloo"></i>
-            <p>Dome</p>
-        </div></a>
-        <a href="/listing/filter/BoatHouse"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-ferry"></i>
-            <p>BoatHouse</p>
-        </div></a>
-        <a href="/listing/filter/Mansion"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-building-columns"></i>
-            <p>Mansion</p>
-        </div></a>
-        <a href="/listing/filter/Island"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-umbrella-beach"></i>            
-            <p>Island</p>
-        </div></a>
-        <a href="/listing/filter/Castle"><div id="feature" class="ms-4">
-            <i class="fa-brands fa-fort-awesome"></i>
-            <p>Castle</p>
-        </div></a>
-        <a href="/listing/filter/Camping"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-tent"></i>
-            <p>Camping</p>
-        </div></a>
-        <a href="/listing/filter/Arctic"><div id="feature" class="ms-4">
-            <i class="fa-regular fa-snowflake"></i>
-            <p>Arctic</p>
-        </div></a>
-        <a href="/listing/filter/Beach"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-umbrella-beach"></i>
-            <p>Beach</p>
-        </div></a>
-        <a href="/listing/filter/TreeHouse"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-tree"></i>
-            <p>TreeHouse</p>
-        </div></a>
-        <a href="/listing/filter/Mountain"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-mountain-city"></i>
-            <p>Mountain</p>
-        </div></a>
-        <a href="/listing/filter/Resort"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-hotel"></i>
-            <p>Resort</p>
-        </div></a>
-        <a href="/listing/filter/WaterVilla"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-bridge-water"></i>
-            <p>WaterVilla</p>
-        </div></a>
-        <a href="/listing/filter/Villa"><div id="feature" class="ms-4">
-            <i class="fa-solid fa-vihara"></i>
-            <p>Villa</p>
-        </div></a>
-    </div>
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-        <% if (!listings || listings.length === 0) { %>
-            <h4 class="mb-4">No such Places are Added!</h4>
-        <% } else { %>
-            <% for(let listing of listings) { %>
-                <a href="/listing/<%= listing._id %>" class="listingLink">
-                    <div class="card listing-card">
-                        <img src="<%= listing.image.url %>" class="card-img-top" alt="..." style="height: 20rem;">
-                        <div class="card-img-overlay"></div>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <b><%= listing.title %></b>
-                                <br>
-                                &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
-                            </p>
-                        </div>
-                    </div>
-                </a>
-            <% } %>
-        <% } %>
-    </div>
+    <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/listing"><i class="fa-solid fa-compass"></i></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link me-3" href="/listing">Explore</a>
+            </div>
+            <form class="d-flex ms-auto" role="search">
+                <input class="form-control me-2 searchBox" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success searchButton" type="submit">Search</button>
+              </form>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="/listing/new">Airbnb your Home</a>
+                <%if(!currUser){%>
+                  <a class="nav-link logsign" href="/signup"><b>Sign Up</b></a>
+                  <a class="nav-link logsign" href="/login"><b>Log In</b></a>
+                  <%}%>
+                <%if(currUser){%>
+                  <a class="nav-link" href="/logout">Log Out</a>
+                <%}%>
     
-    <form action="/listing/new" method="GET" class="mb-4">
-        <button class="btn btn-dark addbtn">Add New</button>
-    </form>
-    
+              </div>
+          </div>
+        </div>
+      </nav>    <div class="container">
+        <%-include("../includes/flash.ejs")%>
+        <style>
+            #features{
+                display: flex;
+                margin-bottom: 1rem;
+                margin-top: 1rem;
+                height: 3.5rem;
+                width: auto;
+                overflow: hidden;
+            }
+            #feature{
+                text-align: center;
+                opacity: 0.7;
+                color: black;
+            }
+            #feature p{
+                font-size: small;
+                text-decoration: dotted;
+            }
+            #feature:hover{
+                opacity: 1;
+                border-bottom: 2px solid rgba(90, 86, 86, 0.409) !important;
+        
+            }
+            #feature:active{
+                font-size: x-small;
+        
+            }
+            a:link {
+                text-decoration: none;
+            }
+            
+            
+        </style>
+        <body>
+            <div id="features" class="col-12">
+                <a href="/listing/filter/FarmHouse"><div id="feature" class="ms-2">
+                    <i class="fa-solid fa-tractor"></i>
+                    <p>FarmHouse</p>
+                </div></a>
+                <a href="/listing/filter/TinyHome"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-house-chimney"></i>
+                    <p>TinyHome</p>
+                </div></a>
+                <a href="/listing/filter/Dome"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-igloo"></i>
+                    <p>Dome</p>
+                </div></a>
+                <a href="/listing/filter/BoatHouse"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-ferry"></i>
+                    <p>BoatHouse</p>
+                </div></a>
+                <a href="/listing/filter/Mansion"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-building-columns"></i>
+                    <p>Mansion</p>
+                </div></a>
+                <a href="/listing/filter/Island"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-umbrella-beach"></i>            
+                    <p>Island</p>
+                </div></a>
+                <a href="/listing/filter/Castle"><div id="feature" class="ms-4">
+                    <i class="fa-brands fa-fort-awesome"></i>
+                    <p>Castle</p>
+                </div></a>
+                <a href="/listing/filter/Camping"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-tent"></i>
+                    <p>Camping</p>
+                </div></a>
+                <a href="/listing/filter/Arctic"><div id="feature" class="ms-4">
+                    <i class="fa-regular fa-snowflake"></i>
+                    <p>Arctic</p>
+                </div></a>
+                <a href="/listing/filter/Beach"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-umbrella-beach"></i>
+                    <p>Beach</p>
+                </div></a>
+                <a href="/listing/filter/TreeHouse"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-tree"></i>
+                    <p>TreeHouse</p>
+                </div></a>
+                <a href="/listing/filter/Mountain"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-mountain-city"></i>
+                    <p>Mountain</p>
+                </div></a>
+                <a href="/listing/filter/Resort"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-hotel"></i>
+                    <p>Resort</p>
+                </div></a>
+                <a href="/listing/filter/WaterVilla"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-bridge-water"></i>
+                    <p>WaterVilla</p>
+                </div></a>
+                <a href="/listing/filter/Villa"><div id="feature" class="ms-4">
+                    <i class="fa-solid fa-vihara"></i>
+                    <p>Villa</p>
+                </div></a>
+            </div>
+            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+                <% if (!listings || listings.length === 0) { %>
+                    <h4 class="mb-4">No such Places are Added!</h4>
+                <% } else { %>
+                    <% for(let listing of listings) { %>
+                        <a href="/listing/<%= listing._id %>" class="listingLink">
+                            <div class="card listing-card">
+                                <img src="<%= listing.image.url %>" class="card-img-top" alt="..." style="height: 20rem;">
+                                <div class="card-img-overlay"></div>
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        <b><%= listing.title %></b>
+                                        <br>
+                                        &#8377;<%= listing.price.toLocaleString("en-IN") %> / night
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    <% } %>
+                <% } %>
+            </div>
+            
+            <form action="/listing/new" method="GET" class="mb-4">
+                <button class="btn btn-dark addbtn">Add New</button>
+            </form>
+            
+        </body>    </div>
+    <%-include("../includes/footer.ejs")%>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/js/script.js"></script>
 </body>
+</html>
+
 
