--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -19,14 +19,11 @@
 <body>
     <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/listing"><i class="fa-solid fa-compass"></i></a>
+         <a class="navbar-brand" href="/listing"><i class="fa-solid fa-compass"></i><span class="ms-2 ">Travello</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link me-3" href="/listing">Explore</a>
-            </div>
             <form class="d-flex ms-auto" role="search">
                 <input class="form-control me-2 searchBox" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success searchButton" type="submit">Search</button>
