--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -24,7 +24,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <form class="d-flex ms-auto" role="search">
+            <form class="d-flex ms-auto ss" role="search">
                 <input class="form-control me-2 searchBox" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success searchButton" type="submit">Search</button>
               </form>
